name: first-game
version: 0.0.1
synopsis: A very simple game
homepage: http://example.com
tested-with: GHC == 7.6.3
license: MIT
author: Mat-tso
copyright: (c) 2014, Mat tso
category: Game
build-type: Simple
cabal-version: >=1.10

executable first-game
    main-is: Main.hs
    default-language: Haskell2010
    ghc-options: -threaded -Wall -O2

    build-depends:
        base >= 4 && < 5,
        helm >= 0.5 && < 1,
        elerea
